--- a/src/scss/basics/_grid.scss
+++ b/src/scss/basics/_grid.scss
@@ -11,6 +11,7 @@ html, body {
 
     > * {
         padding: $whitespace-small;        
+        overflow-x: hidden;
     }
 
     @media screen and (min-width: $tablet-portrait) {
@@ -30,12 +31,12 @@ html, body {
 .site-header {
     display: flex; 
     flex-direction: column;
+    text-transform: uppercase;
 }
 
 .logo {
     margin-right: $whitespace-small;       
 }
-
 
 .section-services {
     position: relative;
@@ -64,7 +65,7 @@ html, body {
     &::before {
         background: $purple;
         content: ' ';
-        width: calc(100% + 20vw);
+        width: calc(100% + 15vw);
         height: 100%;
         display: block;
         position: absolute;
